--- a/BosqueApp/app/src/main/res/layout/activity_main_menu.xml
+++ b/BosqueApp/app/src/main/res/layout/activity_main_menu.xml
@@ -187,7 +187,7 @@
                     <ImageView
                         android:layout_width="48dp"
                         android:layout_height="48dp"
-                        android:src="@drawable/locator"
+                        android:src="@drawable/motherboard"
                         android:contentDescription="@string/icono_de_zona"/>
 
                     <LinearLayout
@@ -199,7 +199,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/tu_zona"
+                            android:text="@string/datos_de_arduino"
                             android:textSize="18sp"
                             android:textStyle="bold"/>
 
@@ -207,7 +207,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:alpha="0.7"
-                            android:text="@string/mira_la_informaci_n_de_los_bosques_cercanos"
+                            android:text="@string/consulta_los_datos_de_arduino_actualizados_en_tiempo_real"
                             android:textColor="@color/black"
                             android:textSize="14sp"/>
 
